# python-llist

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
examples/: lucky_numbers.py
llist/: __init__.py
llist/_pure/: __init__.py  sllist.py
llistplus/: __init__.py
llistplus/_pure/: dllist.py
tests/: dllist_test.py  sllist_test.py
