[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "llistplus"
dynamic = ["version"]
description = "Enhanced linked list data structures for Python with automatic C/Python fallback"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Adam Jakubek", email = "ajakubek@gmail.com"},
    {name = "Rafał Gałczyński", email = "rafal.galczynski@gmail.com"},
]
keywords = ["linked list", "list", "data structures", "enhanced", "fallback", "c extension"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/ajakubek/python-llist"
Documentation = "https://ajakubek.github.io/python-llist/index.html"
Repository = "https://github.com/ajakubek/python-llist"
Issues = "https://github.com/ajakubek/python-llist/issues"

[tool.setuptools]
packages = ["llistplus", "llistplus._pure"]

[tool.setuptools.package-data]
llistplus = ["_llist.pyi", "py.typed"]

[tool.setuptools.dynamic]
version = {attr = "llistplus.__version__"}